try only f# for now

--- a/index.ipynb
+++ b/index.ipynb
@@ -10,6 +10,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -17,7 +22,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -34,7 +39,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -43,46 +48,6 @@
     "|> Chart.withTitle \"This is F#\"\n",
     "|> Chart.withXAxisStyle(\"Ah\")\n",
     "|> Chart.withYAxisStyle(\"yes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#r \"nuget: Plotly.NET.CSharp\"\n",
-    "#r \"nuget: Plotly.NET.Interactive\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "using Plotly.NET.CSharp;\n",
-    "\n",
-    "Chart.Point<int, int, string>(\n",
-    "    x: new int [] {1},\n",
-    "    y: new int [] {2}\n",
-    ")\n",
-    ".WithXAxisStyle<int, int, string>(TitleText: \"Ah\")\n",
-    ".WithYAxisStyle<int, int, string>(TitleText: \"Yes\")"
    ]
   }
  ],
